# hemiplon

./: .gitignore  README.md  cli.py  main.py  pdf_processor.py  project.py  project_manager.py  pyproject.toml  transcribe.py
image_processing/: __init__.py  splitter.py
lib/: file_manager.py  llm_service.py  logger.py  pdf.py  pdf_processor.py  transcribe.py
lib/image_processing/: cleaning.py
lib/projects/: project.py  project_manager.py
lib/prompts/: finalize_translation.j2  transcribe.md  transcription_review.md  translate.j2  translation_review.j2
lib/utils/: diff_checker.py  indexer.py  pipeline_utils.py  scriptorai.py
prompts/: finalize_transcription.j2  finalize_translation.j2  transcribe.md  translate.j2
utils/: diff_checker.py
